--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.1",
+    "react-spinners": "^0.13.8",
+    "react-type-animation": "^3.2.0",
     "tailwindcss": "^3.3.6"
   },
   "devDependencies": {
