--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PORT=8000
+JWT_SECRET=iamprajwalladkat
+MONGO_URI=mongodb+srv://iamprajwalladkat:admin@cluster0.jevqph4.mongodb.net/?retryWrites=true&w=majority
