--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.1",
     "react-spinners": "^0.13.8",
+    "react-toggle-dark-mode": "^1.1.1",
     "react-type-animation": "^3.2.0",
     "tailwindcss": "^3.3.6"
   },
