--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.18",
     "@react-oauth/google": "^0.12.1",
     "autoprefixer": "^10.4.16",
+    "framer-motion": "^10.16.16",
     "jwt-decode": "^4.0.0",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
