--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_PRODUCTION_API_URL=http://localhost:8000/api
+VITE_PRODUCTION_API_URL=https://genman-6u7z.onrender.com
 VITE_DEVELOPMENT_API_URL=http://localhost:8000/api
